@@ -4,6 +4,7 @@ import com.biteme.app.entities.Ordine;
 import com.biteme.app.exception.DatabaseConfigurationException;
 import com.biteme.app.persistence.OrdineDao;
 
+import java.math.BigDecimal;
 import java.sql.*;
 import java.util.ArrayList;
 import java.util.List;
@@ -20,13 +21,15 @@ public class DatabaseOrdineDao implements OrdineDao {
         try {
             this.connection = DatabaseConnection.getConnection();
         } catch (SQLException e) {
-            throw new DatabaseConfigurationException("Impossibile connettersi al database a causa di una configurazione errata", e);
+            throw new DatabaseConfigurationException(
+                    "Impossibile connettersi al database a causa di una configurazione errata", e
+            );
         }
     }
 
     @Override
     public Optional<Ordine> load(Integer id) {
-        String query = "SELECT id, prodotti, quantita FROM ordine WHERE id = ?";
+        String query = "SELECT id, prodotti, quantita, prezzi FROM ordine WHERE id = ?";
         try (PreparedStatement stmt = connection.prepareStatement(query)) {
             stmt.setInt(1, id);
             try (ResultSet rs = stmt.executeQuery()) {
@@ -43,24 +46,43 @@ public class DatabaseOrdineDao implements OrdineDao {
     @Override
     public void store(Ordine ordine) {
         String query;
-
-                if (exists(ordine.getId())) {
-                        query = "UPDATE ordine SET prodotti = ?, quantita = ? WHERE id = ?";
+        boolean exists = ordine.getId() > 0 && exists(ordine.getId());
+        if (exists) {
+            query = "UPDATE ordine SET prodotti = ?, quantita = ?, prezzi = ? WHERE id = ?";
         } else {
-                        query = "INSERT INTO ordine (id, prodotti, quantita) VALUES (?, ?, ?)";
+            query = "INSERT INTO ordine (id, prodotti, quantita, prezzi) VALUES (?, ?, ?, ?)";
         }
 
         try (PreparedStatement stmt = connection.prepareStatement(query)) {
-            int parameterIndex = 1;
+            int i = 1;
+            String prodottiStr = String.join(",", ordine.getProdotti());
+            String quantitaStr = ordine.getQuantita().toString()
+                    .replace("[", "").replace("]", "");
+            String prezziStr = ordine.getPrezzi().stream()
+                    .map(BigDecimal::toString)
+                    .reduce((a, b) -> a + "," + b)
+                    .orElse("");
 
-            if (exists(ordine.getId())) {                 stmt.setString(parameterIndex++, String.join(",", ordine.getProdotti()));                 stmt.setString(parameterIndex++, ordine.getQuantita().toString());                 stmt.setInt(parameterIndex, ordine.getId());             } else {                 stmt.setInt(parameterIndex++, ordine.getId());                 stmt.setString(parameterIndex++, String.join(",", ordine.getProdotti()));                 stmt.setString(parameterIndex, ordine.getQuantita().toString());             }
+            if (exists) {
+                stmt.setString(i++, prodottiStr);
+                stmt.setString(i++, quantitaStr);
+                stmt.setString(i++, prezziStr);
+                stmt.setInt(i, ordine.getId());
+            } else {
+                stmt.setInt(i++, ordine.getId());
+                stmt.setString(i++, prodottiStr);
+                stmt.setString(i++, quantitaStr);
+                stmt.setString(i, prezziStr);
+            }
 
             int affectedRows = stmt.executeUpdate();
             if (affectedRows == 0) {
                 throw new SQLException("Operazione fallita: nessuna riga modificata.");
             }
         } catch (SQLException e) {
-            throw new DatabaseConfigurationException("Errore durante il salvataggio/aggiornamento dell'ordine", e);
+            throw new DatabaseConfigurationException(
+                    "Errore durante il salvataggio/aggiornamento dell'ordine", e
+            );
         }
     }
 
@@ -96,47 +118,58 @@ public class DatabaseOrdineDao implements OrdineDao {
 
     @Override
     public Ordine getById(Integer id) {
-        String query = "SELECT id, prodotti, quantita FROM ordine WHERE id = ?";
-        try (PreparedStatement stmt = connection.prepareStatement(query)) {
-            stmt.setInt(1, id);
-            try (ResultSet rs = stmt.executeQuery()) {
-                if (rs.next()) {
-                    return mapResultSetToOrdine(rs);                 } else {
-                    throw new IllegalArgumentException("Ordine con ID " + id + " non trovato");                 }
-            }
-        } catch (SQLException e) {
-            throw new DatabaseConfigurationException("Impossibile recuperare l'ordine con ID " + id, e);         }
+        return load(id).orElseThrow(
+                () -> new IllegalArgumentException("Ordine con ID " + id + " non trovato")
+        );
     }
 
-
-
     private Ordine mapResultSetToOrdine(ResultSet rs) throws SQLException {
-                int id = rs.getInt("id");
+        int id = rs.getInt("id");
+        List<String> prodotti = parseStringList(rs.getString("prodotti"));
+        List<Integer> quantita = parseIntegerList(rs.getString("quantita"), "quantità");
+        List<BigDecimal> prezzi = parseBigDecimalList(rs.getString("prezzi"), "prezzo");
 
-                String prodottiString = rs.getString("prodotti");
-        List<String> prodotti = new ArrayList<>();
-        if (prodottiString != null && !prodottiString.trim().isEmpty()) {
-            prodotti = List.of(prodottiString.split(","));
+        if ((prodotti.size() != quantita.size() || quantita.size() != prezzi.size())
+                && LOGGER.isLoggable(Level.WARNING)) {
+            LOGGER.warning(String.format(
+                    "Disallineamento tra prodotti, quantità e prezzi per l'ordine con ID: %d", id
+            ));
         }
+        return new Ordine(id, prodotti, quantita, prezzi);
+    }
 
-                String quantitaString = rs.getString("quantita");
-        List<Integer> quantita = new ArrayList<>();
+    private List<String> parseStringList(String input) {
+        if (input == null || input.trim().isEmpty()) return List.of();
+        return List.of(input.split(","));
+    }
 
-        if (quantitaString != null && !quantitaString.trim().isEmpty()) {
-                        quantitaString = quantitaString.replace("[", "").replace("]", "");
-            for (String q : quantitaString.split(",\\s*")) {                 if (!q.trim().isEmpty()) {                     try {
-                        quantita.add(Integer.parseInt(q.trim()));                     } catch (NumberFormatException e) {
-                        LOGGER.log(Level.WARNING, e, () -> "Valore non valido trovato nella quantità: " + q);
-                    }
+    private List<Integer> parseIntegerList(String input, String fieldName) {
+        List<Integer> result = new ArrayList<>();
+        if (input == null || input.trim().isEmpty()) return result;
+        for (String s : input.split(",\\s*")) {
+            if (!s.isBlank()) {
+                try {
+                    result.add(Integer.parseInt(s.trim()));
+                } catch (NumberFormatException e) {
+                    LOGGER.log(Level.WARNING, e, () -> "Valore non valido trovato nella " + fieldName + ": " + s);
                 }
             }
         }
-
-                if (prodotti.size() != quantita.size()) {
-            LOGGER.log(Level.WARNING, () -> "Disallineamento tra prodotti e quantità per l'ordine con ID: " + id);
-        }
-
-                return new Ordine(id, prodotti, quantita);
+        return result;
     }
 
+    private List<BigDecimal> parseBigDecimalList(String input, String fieldName) {
+        List<BigDecimal> result = new ArrayList<>();
+        if (input == null || input.trim().isEmpty()) return result;
+        for (String s : input.split(",\\s*")) {
+            if (!s.isBlank()) {
+                try {
+                    result.add(new BigDecimal(s.trim()));
+                } catch (NumberFormatException e) {
+                    LOGGER.log(Level.WARNING, e, () -> "Valore non valido trovato nel " + fieldName + ": " + s);
+                }
+            }
+        }
+        return result;
+    }
 }
